typography fixes, images sizes fixes

--- a/src/HomeSections/BoatSection/BoatSection.module.css
+++ b/src/HomeSections/BoatSection/BoatSection.module.css
@@ -37,13 +37,12 @@
 }
 
 .title {
-  font-size: 3rem;
   margin-bottom: 1rem;
+  font-weight: 600;
   color: white;
 }
 
 .subTitle {
-  font-size: 1.2rem;
   margin-bottom: 2rem;
   max-width: 600px;
   margin-inline: auto;
