--- a/src/Components/WhatsAppButton/WhatsAppButton.module.css
+++ b/src/Components/WhatsAppButton/WhatsAppButton.module.css
@@ -1,11 +1,10 @@
 .container {
   text-decoration: none;
-  padding: 2px 10px;
+  padding: 10px;
   color: #fff;
   background-color: #25d366;
   border-radius: 25px 30px 5px 25px;
   z-index: 100;
-  font-family: Arial;
   font-size: 17px;
   animation: whatsapp-animation 0.5s ease-in-out;
   box-shadow: 1px 2px 5px 2px rgba(30, 30, 30, 0.3);
