about boat home and specs and faq, faq component

--- a/src/HomeSections/Tours/Tours.module.css
+++ b/src/HomeSections/Tours/Tours.module.css
@@ -63,9 +63,16 @@
   }
   .navItem {
     padding: 0.4rem 0.6rem;
-    font-size: 0.875 rem;
+    font-size: 0.875rem;
   }
   .title {
     margin-bottom: 3rem;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .navItem {
+    padding: 0.4rem 0.6rem;
+    font-size: 0.75rem;
   }
 }
