--- a/src/Components/Cards/TestimonialCard/TestimonialCard.module.css
+++ b/src/Components/Cards/TestimonialCard/TestimonialCard.module.css
@@ -9,12 +9,13 @@
   aspect-ratio: 4/5;
 }
 
-.imageWrapper {
-  height: 100%;
-  width: 100%;
+.imageContainer {
   position: relative;
+  width: 100%;
+  aspect-ratio: 4 / 5;
   overflow: hidden;
   border-radius: 20px;
+  overflow: hidden;
 }
 .image {
   object-fit: cover;
@@ -25,31 +26,24 @@
 .footerContent {
   position: absolute;
   border-radius: 20px;
-  padding: 1rem 2rem;
+  padding: 1rem 3rem 2rem;
   transition: transform 0.5s var(--overlay-ease), margin 0.5s var(--overlay-ease);
   transform: translateY(calc(100% - 120px));
   bottom: 0;
 }
 
 .footerOverlay {
-  background-color: var(--color-white);
-  height: 100%;
-  width: 100%;
-  content: "";
-  display: block;
   position: absolute;
-  bottom: 0;
-  left: 0;
+  inset: 0; /* always full-size of parent */
+  background-color: var(--color-white);
   border-radius: 20px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  transition: transform 0.8s var(--overlay-ease);
-  will-change: transform;
   z-index: -1;
+  transform-origin: top center;
   transform: translateY(100%);
-  margin: 0;
-  padding: 0;
+  transition: transform 0.8s var(--overlay-ease);
+  scale: 1;
 }
-
 .stars {
   display: inline-flex;
   gap: 0.25rem;
@@ -80,6 +74,9 @@
   font-size: 0.875rem;
   margin: 0 0 0.75rem;
   color: #6f6e6c;
+  opacity: 0;
+  transition: opacity 0.5s var(--overlay-ease);
+  will-change: opacity;
 }
 .name {
   font-size: 0.75rem;
@@ -91,7 +88,6 @@
 
 .testimonial:hover .footerContent {
   transform: translateY(0);
-  margin: 2rem;
 }
 
 .testimonial:hover .star {
@@ -101,8 +97,11 @@
 .testimonial:hover .title {
   color: var(--color-black);
 }
+.testimonial:hover .text {
+  opacity: 1;
+}
 .testimonial:hover .footerOverlay {
-  transform: translateY(0);
+  transform: translateY(0) scale(0.9);
 }
 .bottom .stars {
   display: none;
@@ -146,6 +145,9 @@
   .title,
   .star {
     color: var(--color-black);
+  }
+  .text {
+    opacity: 1;
   }
   .bottom {
     display: flex;
