--- a/src/Components/TheButton/TheButton.module.css
+++ b/src/Components/TheButton/TheButton.module.css
@@ -50,3 +50,10 @@
 .large {
   font-size: 1.25rem;
 }
+
+@media only screen and (max-width: 360px) {
+  .btn {
+    min-width: auto;
+    min-height: auto;
+  }
+}
