--- a/src/HomeSections/Hero/Hero.module.css
+++ b/src/HomeSections/Hero/Hero.module.css
@@ -87,6 +87,7 @@
 .buttons {
   display: flex;
   gap: 2rem;
+  justify-content: flex-start;
 }
 
 /* -------------- SPIN ON SMALL ------------- */
@@ -96,5 +97,8 @@
   }
   .inner {
     padding: 1.5rem;
+  }
+  .buttons {
+    justify-content: space-between;
   }
 }
