--- a/src/BoatSections/BoatSpecs/BoatSpecs.module.css
+++ b/src/BoatSections/BoatSpecs/BoatSpecs.module.css
@@ -67,7 +67,6 @@
 }
 
 .label {
-  font-family: var(--font-general);
   font-weight: 400;
   text-align: left;
   opacity: 0.4;
@@ -83,7 +82,6 @@
 }
 
 .value {
-  font-family: var(--font-general);
   font-weight: 400;
   font-size: 14px;
   line-height: 14px;
@@ -99,5 +97,8 @@
 @media only screen and (max-width: 640px) {
   .container {
     padding: 6rem 0 9rem;
+  }
+  .inner {
+    padding: 0;
   }
 }
