--- a/src/HomeSections/AboutUs/AboutUs.module.css
+++ b/src/HomeSections/AboutUs/AboutUs.module.css
@@ -18,14 +18,15 @@
 }
 
 .inner h2 {
-  line-height: 1.2;
+  line-height: 1.3 !important;
+  font-size: 2.75rem;
 }
 @media only screen and (max-width: 640px) {
-  .container {
-    height: 80vh;
-  }
   .inner {
-    padding: 0rem 3rem;
+    padding: 0rem 2rem;
     width: 100%;
+  }
+  .inner h2 {
+    font-size: clamp(1.5rem, 2.5vw, 2rem);
   }
 }
