AnimatedText css fix, swiper tours fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,7 +113,9 @@ small {
   pointer-events: none;
 }
 
-[class^="line"] {
+.split-mask-line-mask,
+.split-line {
   display: inline-block;
+  vertical-align: top;
   overflow: hidden;
 }
