AnimatedText fix, added single tour page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,7 +115,7 @@ small {
 
 .split-mask-line-mask,
 .split-line {
-  display: inline-block;
-  vertical-align: top;
+  display: block;
+  /* vertical-align: top; */
   overflow: hidden;
 }
