--- a/src/Components/GallerySection/GallerySection.module.css
+++ b/src/Components/GallerySection/GallerySection.module.css
@@ -71,3 +71,14 @@
 .imageWrapper:hover .image {
   transform: scale(1.05);
 }
+
+.zoomIcon {
+  position: absolute;
+  top: 18px;
+  right: 17px;
+  width: 21px;
+  height: 21px;
+  color: #fff;
+  pointer-events: none;
+  z-index: 2;
+}
