--- a/src/Components/GallerySection/GallerySection.module.css
+++ b/src/Components/GallerySection/GallerySection.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  padding-block: 6rem;
+  padding: 6rem 0 0;
 }
 
 .header {
@@ -34,19 +34,26 @@
   margin-top: 3rem;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   padding-inline: 1rem;
 }
 
 .row {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 1.5rem;
+  gap: 1rem;
 }
 
 @media (max-width: 768px) {
   .row {
     grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
+  .grid {
+    gap: 1rem;
+  }
+  .aspectBox {
+    border-radius: 10px;
   }
 }
 
