--- a/src/HomeSections/Hero/Hero.module.css
+++ b/src/HomeSections/Hero/Hero.module.css
@@ -55,7 +55,7 @@
   padding: 3rem;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   gap: 2rem;
   color: var(--color-white);
   visibility: hidden; /* revealed by GSAP */
@@ -95,6 +95,7 @@
   }
   .inner {
     padding: 1.5rem 1.5rem 4rem;
+    justify-content: flex-end;
   }
   .buttons {
     justify-content: space-between;
