--- a/src/Components/CoverButton/CoverButton.module.css
+++ b/src/Components/CoverButton/CoverButton.module.css
@@ -49,6 +49,8 @@
   font-size: 1rem;
   line-height: 1.25rem;
   text-align: right;
+  color:var(--color-black);
+  color:var(--color-black);
 }
 
 .playButton {
