--- a/src/HomeSections/Hero2/Hero.module.css
+++ b/src/HomeSections/Hero2/Hero.module.css
@@ -52,29 +52,45 @@
 }
 
 /* —————————————————— TITLE / COPY —————————————————— */
-.copy {
-  will-change: transform;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
-  align-content: stretch;
-  gap: 1.5rem;
-  text-align: center;
-  color: var(--color-white);
-  visibility: hidden; /* revealed by GSAP */
-  opacity: 0;
-  width: 100%;
-  height: 100%;
-}
 .title {
   margin: 0;
-  font-size: clamp(2.5rem, 6vw, 5rem);
+  font-size: clamp(4rem, 13vw, 18rem); /* previously 10vw */
   line-height: 1;
-  font-weight: 600;
-  overflow: hidden;
+  font-weight: 700;
+  letter-spacing: -6px;
+  text-align: center;
+  width: 100%;
+  /* overflow: hidden; */
   text-shadow: 2px 3px 5px rgba(0, 0, 0, 0.5);
+}
+.copy {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  /* opacity: 0; */
+  visibility: hidden;
+  will-change: transform;
+  width: 100%;
+  text-align: center;
+  color: var(--color-white);
+}
+
+.subtitle {
+  left: 95%;
+  top: 70%;
+  transform: translate(-95%, -70%);
+  width: 50%;
+  text-align: right;
+  position: absolute;
+  text-transform: uppercase;
+}
+
+.subtitle h2 {
+  color: var(--color-white);
+  font-size: 1.2rem;
+  /* font-weight: 300; */
+  line-height: 2rem;
 }
 
 /* —————————————————— MOBILE / TABLET CTA —————————————————— */
@@ -123,6 +139,22 @@
 } /* hidden by default */
 
 @media (min-width: 1024px) {
+  .title {
+    letter-spacing: -16px;
+  }
+  .copy {
+    bottom: 5%;
+  }
+  .subtitle {
+    left: 95%;
+    top: 50%;
+    transform: translate(-95%, -50%);
+    width: 16%;
+  }
+  .subtitle h2 {
+    font-size: 2rem;
+    line-height: 2.5rem;
+  }
   .mobileCta {
     display: none;
   }
@@ -130,3 +162,9 @@
     display: block;
   } /* hidden by default */
 }
+
+/* .line {
+  display: block;
+  overflow: hidden;
+}
+ */
